k8s-resources/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations: {}
spec:
  ingressClassName: nginx
  rules:
    - host: eunbie.site
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: node
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
