k8s-resources/ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: eunbie.site
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific  # 중요!
            backend:
              service:
                name: fastapi
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
